--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.app.pizzaapp.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:name="com.app.pizzaapp.MyApplication"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.PizzaApp"
         tools:targetApi="31">
+        <activity
+            android:label="Cart"
+            android:name="com.app.pizzaapp.view.activity.CartItemsActivity"
+            android:exported="false" />
         <activity
             android:name="com.app.pizzaapp.view.activity.DashboardActivity"
             android:exported="true">
