--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/Theme.PizzaApp"
         tools:targetApi="31">
         <activity
-            android:label="Cart"
+            android:label="@string/my_cart"
+            android:parentActivityName="com.app.pizzaapp.view.activity.DashboardActivity"
             android:name="com.app.pizzaapp.view.activity.CartItemsActivity"
             android:exported="false" />
         <activity
